# Shop

./: pyproject.toml  req.txt
company/: admin.py  apps.py  models.py  urls.py  views.py
company/migrations/: 0001_initial.py
core/: models.py
settings/: asgi.py  pyproject.toml  settings.py  urls.py
settings/core/: models.py
settings/settings/: settings.py  urls.py
settings/shop/: models.py
shop/: admin.py  forms.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py
static/company/: company_info.css
static/shop/: index.css
static/user/: login.css  personal_area.css  register.css
templates/: 404.html  index.html
templates/company/: company_info.html
templates/shop/: create_product.html  product_confirm_delete.html
templates/user/: customuser_confirm_delete.html  login.html  personal_area.html  register.html  update_user.html
user/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py
