[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["FloppaSlave  <korstim18@gmail.com>"]
readme = "README.md"
packages = [{include = "my_project"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.2.16"
pillow = "^9.3.0"
django-filter = "^22.1"
django-cleanup = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
